Change 'kaldi-red' token

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,6 +1,6 @@
 @import "~bulma/sass/utilities/initial-variables"
 
-$kaldi-red: #FD461E
+$kaldi-red: #cf222e
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
